# hft_eb

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md  build_release.sh  run.sh  run_kline_synth.sh  todo.md
conf/: config.json  config.yaml  config_au2606.json  config_au2606.yaml  config_factor_test.yaml  config_full.json  config_full.yaml  config_real.json  config_real.yaml  config_real_test.yaml  config_recorder.json  config_recorder.yaml  config_replay.json  config_replay.yaml  config_replay_test.yaml  config_strategy_tree.json  config_strategy_tree.yaml  config_sweep.yaml  symbols.txt
core/include/: market_snapshot.h  mmap_util.h  order_manager.h  protocol.h  ring_buffer.h  shm_snapshot.h  symbol_manager.h
core/src/: market_snapshot.cpp  symbol_manager.cpp
demo/: bench_eventbus.cpp  bench_payload.cpp  bench_ringbuffer.cpp  main.cpp
docs/: K线插件设计_kline.md  data_stream_design.md  kline_engine_design.md  position_design.md  py_backtest_design.md  risk_design.md  roadmap.md  strategy_tree_design.md  中央脉搏调度设计_centralized_timer.md  共享内存快照设计_shm_snapshot.md  因子插件设计_factor.md  并发架构设计_concurrency_design.md  开发路线图_roadmap.md  扫单交易插件设计_sweep_trader.md  持仓管理设计_position.md  热重载设计_hot_reload.md  监控模块设计_monitor.md  编译优化指南_compile_optimization.md  行情流设计_data_stream.md  订单管理设计_order_manager.md  风控模块设计_risk.md
hft_md/: CMakeLists.txt  GEMINI.md  build.sh  data_stream_design.md  read_dat.sh  run.sh  run_night.sh
hft_md/conf/: config.json  config.yaml  config_night.yaml
hft_md/include/: Recorder.h
hft_md/src/: Recorder.cpp  main.cpp
hft_md/tools/: kline_gen.cpp  read_dat.cpp
include/: engine.h  framework.h
modules/ctp/: ctp_module.cpp
modules/ctp_real/: ctp_real_module.cpp
modules/kline/: kline_module.cpp
modules/monitor/: monitor_module.cpp
modules/order/: order_manager_module.cpp
modules/position/: position_module.cpp
modules/replay/: replay_module.cpp
modules/risk/: risk_module.cpp
modules/strategy/: cs_combiner_node.cpp  grid_strategy.cpp  imbalance_node.cpp  price_jump_node.cpp  simple_strategy.cpp  sma_factor_node.cpp  stat_arb_node.cpp  strategy_tree_module.cpp
modules/sweep_trader/: sweep_trader_module.cpp
modules/trade/: simple_trade.cpp
rust_tools/: Cargo.toml  run_convert.sh
rust_tools/src/: lib.rs
src/: engine.cpp  main.cpp
tools/: gen_subs_from_cache.py  read_kline.cpp
